--- a/3_sem/Lab_1/.travis.yml
+++ b/3_sem/Lab_1/.travis.yml
@@ -1,9 +1,9 @@
-language: cpp
+language: c++
 matrix:
   include:
     - os: osx
-      compiler: clang-3.8
-      env: COMPILER=clang++ -std=c++11
+      compiler: g++-5
+      env: COMPILER=g++ -std=c++11
 
 script:
   - mkdir build && cd build
